dark mode fixed

--- a/src/App.css
+++ b/src/App.css
@@ -31,7 +31,7 @@ ner{
   background-size: cover;
 }
 .calc-height{
-  height: calc(100vh - 70px)
+  min-height: calc(100vh - 70px)
 }
 .banner{
   height: 600px;
